src/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap");

:root {
  --high-priority-color: #dc262690;
  --medium-priority-color: #eab30890;
  --low-priority-color: #22c55e90;

  --purple: rgba(127, 110, 221, 1);
  --pink: rgba(255, 118, 146, 1);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  /* border: 1px solid red; */
}

button {
  cursor: pointer;
  background-color: unset;
  outline: unset;
  border: none;
}

body {
  max-height: 100vh;
  font-family: "Inter Tight", sans-serif;
  overflow: hidden;
}

.logo {
  font-weight: 600;
}

header .material-symbols-outlined {
  font-size: 40px;
}

header {
  padding: 10px 20px;
  height: 6%;
  color: white;
  background: linear-gradient(22deg, var(--purple) 0%, var(--pink) 100%);
  display: flex;
  gap: 5px;
}

.main {
  height: 94%;
  display: grid;
  grid-template-columns: 1fr 5fr;
}

.left-panel,
.main-tabs,
.projects-list-container,
.projects-list {
  display: flex;
  flex-direction: column;
}

.left-panel {
  padding: 30px 20px;
  background-color: #eeeeee;
  justify-content: space-between;
  gap: 20px;
  max-height: 94vh;
}

.main-tabs,
.projects-list-container,
.projects-list {
  gap: 15px;
}

.tab {
  display: flex;
  align-items: center;
  gap: 5px;
  cursor: pointer;
  font-size: 22px;
  border-radius: 5px;
  padding: 10px;
  background-color: rgba(255, 255, 255, 0.7);
}

.tab .counter {
  margin-left: 5px;
  border-radius: 50px;
  background-color: var(--pink);
  color: white;
  padding: 2px;
  width: 28px;
  height: 22px;
  text-align: center;
  font-size: 14px;
  font-weight: 500;
}

.tab:hover .counter,
.tab.active .counter {
  background-color: white;
  color: initial;
}

.projects-list-container .top {
  padding: 5px 0px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px solid black;
  max-height: 300px;
}

.projects-list {
  max-height: 400px;
  overflow: auto;
}

.left-panel .top h2 {
  font-weight: 600;
}

button.new-project-btn {
  border-radius: 50%;
  font-size: 24px;
  width: 30px;
  height: 30px;
  font-size: 28px;
}

button.new-project-btn:hover {
  background-color: var(--purple);
  color: white;
}

.project,
.buttons-div {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.project {
  padding: 10px;
}

.project .project-name {
  max-width: 180px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.buttons-div {
  margin-left: auto;
  gap: 5px;
}

.buttons-div button {
  color: rgb(30, 30, 30);
  padding: 3px;
  border-radius: 3px;
  font-weight: 300;
}

.tab:hover button,
.tab.active button {
  color: white;
}

.buttons-div button:hover {
  background-color: white;
  color: rgb(30, 30, 30);
}

.tab:hover,
.tab.active {
  color: white;
  background-color: var(--purple);
}

/* ----------------------- */

.content {
  padding: 40px;
}

.content .top {
  display: flex;
  /* justify-content: space-between; */
  gap: 5px;
  align-items: center;
}

.content-title {
  font-size: 30px;
  font-weight: 600;
  color: rgb(30, 30, 30);
}

.content .top .icon {
  font-size: 30px;
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  color: rgb(30, 30, 30);
}

.new-task-btn {
  /* width: 80px; */
  font-size: 20px;
  align-items: center;
  display: flex;
  background-color: var(--pink);
  margin-left: 5px;
  border-radius: 5px;
  color: white;
  padding: 5px 8px;
  background: linear-gradient(22deg, var(--purple) 0%, var(--pink) 100%);
}

label[for="selectSort"] {
  margin-left: auto;
  font-size: 18px;
}

#selectSort {
  height: 25px;
  width: 130px;
  text-overflow: ellipsis;
}

.tasks-container {
  padding: 3px;
  margin-top: 10px;
  display: flex;
  flex-flow: column;
  gap: 10px;
  overflow: auto;
  height: 82vh;
}

.task {
  padding: 6px 10px;
  border: 1px solid rgb(185, 185, 185);
  display: flex;
  flex-flow: column;
  font-size: 16px;
  gap: 5px;
  border-left: 6px solid rgb(185, 185, 185);
}

.task:hover,
label:hover {
  cursor: pointer;
  background-color: rgb(240, 240, 240);
}

.checkbox.checked::after {
  content: "check_circle";
  font-weight: 400;
  font-variation-settings: "FILL" 1;
  color: var(--pink);
}

.checkbox::after {
  content: "radio_button_unchecked";
  color: gray;
  font-weight: 200;
}

.task .basic {
  display: grid;
  grid-template-columns: 0.2fr 10fr 0.8fr 1fr 1fr;
  align-items: center;
  gap: 15px;
}

.task button.go-to-project {
  border: 1px solid rgb(50, 50, 50);
  padding: 4px;
  border-radius: 50px;
  text-align: center;
  color: rgb(50, 50, 50);
  background-color: white;
  font-size: 16px;
}

.task button.go-to-project:hover {
  background-color: rgb(230, 230, 230);
}

.task .dueDate {
  text-align: center;
}

.task .dueDate.expired {
  color: red;
}

.task .details {
  border-top: 1px solid gray;
  padding: 10px 5px;
  padding-bottom: 0;
}

.view-task-btn,
.edit-task-btn,
.delete-task-btn {
  color: rgb(30, 30, 30);
  font-weight: 300;
}

.task .buttons-div button:hover {
  background-color: rgb(240, 240, 240);
}

.task input[type="checkbox"]:checked ~ label {
  text-decoration: line-through;
  color: gray;
}

.task input[type="checkbox"] {
  width: 20px;
  height: 20px;
}

/* ---------------- */

dialog {
  width: 25%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border: none;
  outline: none;
  border-radius: 4px;
  box-shadow: 0px 0px 10px rgb(30, 30, 30);
}

dialog::backdrop {
  background-color: rgba(0, 0, 0, 0.6);
}

dialog .top {
  display: flex;
  justify-content: space-between;
  background: linear-gradient(22deg, var(--purple) 0%, var(--pink) 100%);
  color: white;
  padding: 10px 15px;
}

.close-btn {
  color: white;
}

.modal-content {
  height: 100%;
  display: flex;
  flex-flow: column;
  justify-content: space-between;
}

form {
  padding: 15px;
  height: 100%;
  display: flex;
  flex-flow: column;
  gap: 15px;
  font-size: 20px;
}

button[type="submit"] {
  padding: 10px;
  font-size: 18px;
  border-radius: 5px;
  border: 1px solid black;
  align-self: flex-end;
  background-color: var(--purple);
  color: white;
  border: none;
}

input,
textarea,
dialog select {
  padding: 10px;
  font-size: 18px;
}

textarea {
  resize: none;
}

fieldset {
  border: none;
  display: flex;
  gap: 10px;
}

legend {
  margin-bottom: 20px;
}

input[type="radio"] {
  display: none;
}

input[type="radio"] ~ label {
  cursor: pointer;
  border: 1px solid gray;
  border-radius: 4px;
  padding: 5px 10px;
}

input[type="radio"]:checked ~ label {
  color: white;
  /* background-color: gray; */
}

input[value="high"]:checked ~ label {
  background-color: var(--high-priority-color);
}

input[value="medium"]:checked ~ label {
  background-color: var(--medium-priority-color);
}

input[value="low"]:checked ~ label {
  background-color: var(--low-priority-color);
}

